; ModuleID = '/home/carl/AnghaBench/zfs/module/zfs/extr_dmu_send.c_range_alloc.c'
source_filename = "/home/carl/AnghaBench/zfs/module/zfs/extr_dmu_send.c_range_alloc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.send_range = type { i32, i32, i8*, i8*, i8* }

@KM_SLEEP = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.send_range* (i32, i8*, i8*, i8*, i32)* @range_alloc to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.send_range* @range_alloc(i32 %0, i8* %1, i8* %2, i8* %3, i32 %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i32, align 4
  %11 = alloca %struct.send_range*, align 8
  store i32 %0, i32* %6, align 4
  store i8* %1, i8** %7, align 8
  store i8* %2, i8** %8, align 8
  store i8* %3, i8** %9, align 8
  store i32 %4, i32* %10, align 4
  %12 = load i32, i32* @KM_SLEEP, align 4
  %13 = call %struct.send_range* @kmem_alloc(i32 32, i32 %12)
  store %struct.send_range* %13, %struct.send_range** %11, align 8
  %14 = load i32, i32* %6, align 4
  %15 = load %struct.send_range*, %struct.send_range** %11, align 8
  %16 = getelementptr inbounds %struct.send_range, %struct.send_range* %15, i32 0, i32 0
  store i32 %14, i32* %16, align 8
  %17 = load i8*, i8** %7, align 8
  %18 = load %struct.send_range*, %struct.send_range** %11, align 8
  %19 = getelementptr inbounds %struct.send_range, %struct.send_range* %18, i32 0, i32 4
  store i8* %17, i8** %19, align 8
  %20 = load i8*, i8** %8, align 8
  %21 = load %struct.send_range*, %struct.send_range** %11, align 8
  %22 = getelementptr inbounds %struct.send_range, %struct.send_range* %21, i32 0, i32 3
  store i8* %20, i8** %22, align 8
  %23 = load i8*, i8** %9, align 8
  %24 = load %struct.send_range*, %struct.send_range** %11, align 8
  %25 = getelementptr inbounds %struct.send_range, %struct.send_range* %24, i32 0, i32 2
  store i8* %23, i8** %25, align 8
  %26 = load i32, i32* %10, align 4
  %27 = load %struct.send_range*, %struct.send_range** %11, align 8
  %28 = getelementptr inbounds %struct.send_range, %struct.send_range* %27, i32 0, i32 1
  store i32 %26, i32* %28, align 4
  %29 = load %struct.send_range*, %struct.send_range** %11, align 8
  ret %struct.send_range* %29
}

declare dso_local %struct.send_range* @kmem_alloc(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
